# NiurxWHL

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  binding.cpp  carma_examples.py  pop_4_32_128_12_0.9_4_3.txt  pop_4_32_128_12_0.9_4_5.txt  pop_4_32_64_14_0.9_8_12.txt  pop_4_64_128_12_0.9_7_10.txt  pop_4_64_128_12_0.9_7_15.txt  pop_6_32_128_16_0.9_4_5.txt  pop_6_32_64_16_0.9_8_12.txt  pop_6_32_64_16_0.9_8_15.txt  pop_6_64_128_16_0.9_7_10.txt  pop_6_64_128_16_0.9_7_15.txt  pop_8_32_128_20_0.9_4_4.txt  pop_8_32_128_20_0.9_4_5.txt  pop_8_32_128_22_0.9_4_4.txt  pop_8_32_64_20_0.9_8_10.txt  pop_8_32_64_20_0.9_8_11.txt  pop_8_32_64_20_0.9_8_12.txt  pop_8_32_64_20_0.9_8_13.txt  pop_8_32_64_20_0.9_8_14.txt  pop_8_32_64_20_0.9_8_15.txt  pop_8_32_64_20_0.9_8_16.txt  pop_8_32_64_20_0.9_8_5.txt  pop_8_32_64_20_0.9_8_7.txt  pop_8_32_64_20_0.9_8_8.txt  pop_8_32_64_20_0.9_8_9.txt  pop_8_32_64_22_0.9_7_10.txt  pop_8_32_64_22_0.9_8_10.txt  pop_8_32_64_22_0.9_8_12.txt  pop_8_32_64_22_0.9_8_15.txt  pop_8_64_128_20_0.9_7_10.txt  pop_8_64_128_20_0.9_7_15.txt  pop_8_64_128_20_0.9_7_20.txt  pop_8_64_128_20_0.9_8_10.txt  pop_8_64_128_22_0.9_7_10.txt  pop_8_64_128_22_0.9_7_15.txt  (+6 more)
include/: Algorithm.h  CholeskyInv.h  Cons.h  Detection.h  DetectionAlgorithm.h  EP.h  EPAwNSA.h  ExBsP.h  MIMO.h  MMSE.h  Mimo.h  baseCode.h  det.h  detection.h  utils.h
include/IDD/: ExBsP_NB.h  IDDAlgorithm.h
include/NBLDPC/: BinGF.h  NBLDPC.h  NBTools.h  codeData.h
mimo/: __init__.py
src/: Algorithm.cpp  Cholesky.cpp  Detection.cpp  MMSE.cpp  Mimo.cpp  binding.cpp  example_bindings.cpp  main.cpp  utils.cpp
src/Decodings/NBLDPC/: NBLDPC.cpp  NBTools.cpp
src/Decodings/baseCode/: baseCode.cpp
src/Detections/: DetectionAlgorithm.cpp  EP.cpp  EPAwNSA.cpp  ExBsP.cpp
src/IDD/: ExBsP_NB.cpp
src/algorithms/: Algorithm.cpp  DetectionAlgorithm.cpp  EP.cpp  ExBsP.cpp  MMSE.cpp
src/mimo/: __init__.py
src/mimo.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: Cholesky.cpp  Detection.cpp  MIMO.cpp
test/: GenAlg.py  test.cpp  test_basic.py  test_parallel.py
tests/: test_basic.py
